# DiscordBot

./: Anexos.py  dorian2.db  frases.py  main.py  pyproject.toml  sql.py
cogs/: Economia.py  Interacciones_Multiples.py  Interacciones_Unicas.py  Moderacion.py  Music.py  Senado.py  tasks.py
test1/: t1.py
